[project]
name = "backend"
version = "0.1.0"
description = "Amazon Clone Pro backend built with FastAPI"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy[asyncio]==2.0.36",
    "aiosqlite==0.22.1",
    "pydantic==2.10.6",
    "pydantic-settings==2.14.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "python-multipart==0.0.6",
    "email-validator==2.3.0",
    "cloudinary==1.41.0",
    "stripe==10.11.0",
    "websockets==12.0",
]
